# AgentAcademy

./: README.md
backend/: manage.py  pyproject.toml
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py  0002_account.py  0003_accountdetail.py
backend/accounts/templates/accounts/: file_upload.html  video_upload.html
backend/agentacademy/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
backend/chatbot/: urls.py  views.py
backend/chatbot/actions/: chatbot_agent.py
backend/core/: indices.py  search.py  transforms.py
backend/core/embeddings/: cohere.py
backend/core/llms/: claude.py  constants.py
backend/core/readers/: happyfox_helpdesk.py
backend/core/vector_stores/: opensearch.py
backend/courses/: admin.py  constants.py  models.py  podcast.py  serializers.py  urls.py  views.py
backend/courses/management/commands/: clear_data.py  setup_data.py
backend/courses/migrations/: 0001_initial.py  0002_course_thumbnail.py  0003_remove_course_estimated_duration_and_more.py  0004_alter_module_description_and_more.py
backend/data_sources/: admin.py  ingestion.py  models.py
backend/data_sources/migrations/: 0001_initial.py  0002_datasourcecontent_file.py
backend/opensearch_manager/: async_client.py  client.py  constants.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  demo.js  index.css
frontend/src/components/chatbot/: Chatbot.jsx
frontend/src/components/courses/: CourseDetails.jsx  CourseModule.jsx  Courses.jsx  LearningCourseCard.jsx  NoteViewer.jsx  VideoPlayer.jsx
(+8 files in other folders)
