[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.21",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "markdown2>=2.5.3",
    "google>=3.0.0",
    "google-genai>=1.15.0",
    "google-generativeai>=0.8.5",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.0",
    "opensearch-py>=2.8.0",
    "llama-index>=0.12.36",
    "llama-index-vector-stores-opensearch>=0.5.3",
    "llama-index-embeddings-bedrock>=0.4.0",
    "llama-index-llms-bedrock-converse==0.4.3",
    "lxml>=5.4.0",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
    "daphne>=4.1.2",
]
